# recipes-app

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.nginx  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: pr-to-main.yml  release.yml
.gitlab/workflows/: main-push.yml  mr-to-main.yml  no-op.yml  release.yml
.nginx/: default.conf
frontend/: index.html  package-lock.json  package.json  vite.config.mjs
frontend/src/: App.tsx  Router.tsx  main.tsx
frontend/src/api/: Api.ts  types.ts
frontend/src/components/: AppLayout.tsx  CreateIngredientModal.tsx  CreateRecipeModal.tsx  ErrorBoundary.tsx  FdcFoodItemTable.tsx  JsonViewer.tsx  LazyWrapper.tsx  RecipeListDetail.tsx  RecipeListForm.tsx  RecipeSearchModal.tsx  RouterErrorBoundary.tsx
frontend/src/hooks/: useErrorReporting.ts  useFdcFoodItem.ts  useFdcFoodItems.ts  useFdcSettings.ts  useIngredient.ts  useIngredients.ts  useRecipe.ts  useRecipeLists.ts  useRecipes.ts
frontend/src/pages/: FdcFoodItemDetail.page.tsx  FdcFoodItems.page.tsx  FdcSettings.page.tsx  IngredientDetail.page.tsx  Ingredients.page.tsx  RecipeDetail.page.tsx  RecipeLists.page.tsx  Recipes.page.tsx
recipes/: celery.py  logging.py  settings.py  urls.py
recipes/fdc/: __init__.py  admin.py  api.py  apps.py  models.py  response_models.py  serializers.py  tasks.py  views.py
recipes/fdc/migrations/: 0001_initial.py  0002_fooditem_brand_name.py  0003_fooditem_error_count.py
